Fixed block align and row mobile responsive.

--- a/packages/demo-theme/src/style/elements/layout.scss
+++ b/packages/demo-theme/src/style/elements/layout.scss
@@ -13,10 +13,11 @@
   position: relative;
   display: flex;
   box-sizing: border-box;
-  flex-direction: row;
+  flex-direction: column;
 
   @include desktop-and-tablet{
     flex: 100% 1;
+    flex-direction: row;
   }
 
   @include mobile{
